crates/turbo-tasks-macros-tests/tests/derive_resolved_value/fail_simple_structs.rs
#![allow(dead_code)]

use turbo_tasks::ResolvedValue;

struct UnresolvedValue;

#[derive(ResolvedValue)]
struct ContainsUnresolvedValueNamed {
    a: UnresolvedValue,
}

#[derive(ResolvedValue)]
struct ContainsUnresolvedValueUnnamed(UnresolvedValue);

fn main() {}
